Add Profile, kurang punya akhras recycler nya susah

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,5 +20,9 @@
             android:id="@+id/nav_grafik"
             android:icon="@drawable/diagram"
             android:title="@string/menu_grafik" />
+        <item
+            android:id="@+id/nav_profile"
+            android:icon="@drawable/user"
+            android:title="@string/menu_profile" />
     </group>
 </menu>
