--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#9867EC</color>
+    <color name="button_outline">#A8DADB</color>
+    <color name="button_outline2">#F98D8D</color>
 </resources>
