--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,6 +24,18 @@
         <item name="android:layout_gravity">bottom</item>
     </style>
 
+    <style name="CustomButton" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/button_outline</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="CustomButton2" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/button_outline2</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
     <style name="Theme.ProjectPAB2024.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.ProjectPAB2024.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
