--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -41,7 +41,7 @@
                 android:layout_width="235dp"
                 android:layout_height="243dp"
                 android:contentDescription="@string/descProfile"
-                android:src="@drawable/maskot" />
+                android:src="@drawable/logouns" />
         </androidx.cardview.widget.CardView>
 
         <TextView
@@ -59,6 +59,17 @@
             android:textSize="18sp"
             android:textColor="@color/black" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:justificationMode="inter_word"
+            android:fontFamily="@font/koho"
+            android:textStyle="bold"
+            android:textSize="19sp"
+            android:text="@string/desc_uns"/>
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonShare"
             android:layout_width="match_parent"
@@ -66,6 +77,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
+            android:layout_marginBottom="60dp"
             android:background="@drawable/button"
             android:fontFamily="@font/koho"
             android:textStyle="bold"
