--- a/app/src/main/res/layout/fragment_prosedur.xml
+++ b/app/src/main/res/layout/fragment_prosedur.xml
@@ -1,76 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundall"
-    android:orientation="vertical"
     android:padding="10dp"
     tools:context=".ui.prosedur.ProsedurFragment">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="18dp"
-        android:textAlignment="center"
-        android:fontFamily="@font/koho"
-        android:textStyle="bold"
-        android:text="@string/title_prosedur"
-        android:textSize="29sp"
-        android:textColor="@color/black"/>
+        android:paddingBottom="100dp"
+        android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        android:textAlignment="center"
-        android:fontFamily="@font/koho"
-        android:textSize="17sp"
-        android:justificationMode="inter_word"
-        android:text="@string/description_prosedur1"/>
-
-    <TextView
-        android:id="@+id/unduh"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        android:textAlignment="center"
-        android:textColor="@color/purple"
-        android:fontFamily="@font/koho"
-        android:textSize="17sp"
-        android:text="@string/unduh_document"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        android:textAlignment="center"
-        android:justificationMode="inter_word"
-        android:fontFamily="@font/koho"
-        android:textSize="17sp"
-        android:text="@string/description_prosedur2"/>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="300dp"
-        android:layout_height="225dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        app:cardCornerRadius="15dp">
-
-        <ImageView
-            android:id="@+id/image_prosedur"
+        <TextView
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="18dp"
+            android:textAlignment="center"
+            android:fontFamily="@font/koho"
+            android:textStyle="bold"
+            android:text="@string/title_prosedur"
+            android:textSize="29sp"
+            android:textColor="?colorOnBackground"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:textAlignment="center"
+            android:fontFamily="@font/koho"
+            android:textSize="17sp"
+            android:justificationMode="inter_word"
+            android:textColor="?colorOnBackground"
+            android:text="@string/description_prosedur1"/>
+
+        <TextView
+            android:id="@+id/unduh"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:textAlignment="center"
+            android:textColor="@color/purple"
+            android:fontFamily="@font/koho"
+            android:textSize="17sp"
+            android:text="@string/unduh_document"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:textAlignment="center"
+            android:justificationMode="inter_word"
+            android:fontFamily="@font/koho"
+            android:textSize="17sp"
+            android:textColor="?colorOnBackground"
+            android:text="@string/description_prosedur2"/>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="300dp"
             android:layout_height="225dp"
-            android:contentDescription="@string/description_prosedur"
-            android:src="@drawable/prosedur" />
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            app:cardCornerRadius="30dp">
+
+            <ImageView
+                android:id="@+id/image_prosedur"
+                android:layout_width="match_parent"
+                android:layout_height="225dp"
+                android:contentDescription="@string/description_prosedur"
+                android:src="@drawable/prosedur" />
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="18dp"
+            android:textAlignment="textStart"
+            android:fontFamily="@font/koho"
+            android:textStyle="bold"
+            android:text="@string/subtitle_prosedur"
+            android:textSize="19sp"
+            android:textColor="?colorOnBackground"/>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewYoutube"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            app:cardCornerRadius="10dp">
+
+            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+                android:id="@+id/youtube_player_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                app:videoId="sq-HzHeopQA"
+                app:autoPlay="false" />
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+</ScrollView>
