--- a/app/src/main/res/layout/fragment_prosedur.xml
+++ b/app/src/main/res/layout/fragment_prosedur.xml
@@ -5,19 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundall"
-    android:padding="10dp"
     tools:context=".ui.prosedur.ProsedurFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="100dp"
+        android:paddingHorizontal="30dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="110dp"
         android:orientation="vertical" >
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="18dp"
+            android:layout_marginVertical="18dp"
             android:textAlignment="center"
             android:fontFamily="@font/koho"
             android:textStyle="bold"
@@ -29,8 +30,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
             android:textAlignment="center"
             android:fontFamily="@font/koho"
             android:textSize="17sp"
@@ -43,8 +42,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
             android:textAlignment="center"
             android:textColor="@color/purple"
             android:fontFamily="@font/koho"
@@ -55,8 +52,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
             android:textAlignment="center"
             android:justificationMode="inter_word"
             android:fontFamily="@font/koho"
@@ -84,7 +79,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="18dp"
+            android:layout_marginVertical="18dp"
             android:textAlignment="textStart"
             android:fontFamily="@font/koho"
             android:textStyle="bold"
