--- a/app/src/main/res/drawable/rounded_bottom_sheet.xml
+++ b/app/src/main/res/drawable/rounded_bottom_sheet.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="?android:colorBackground" />
-    <corners android:radius="25dp" />
+    <corners
+        android:topLeftRadius="25dp"
+        android:topRightRadius="25dp" />
 </shape>
