--- a/app/src/main/res/layout/bottomsheet.xml
+++ b/app/src/main/res/layout/bottomsheet.xml
@@ -13,10 +13,12 @@
 
     <TextView
         android:id="@+id/title"
-        style="@style/TextAppearance.Material3.TitleLarge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
+        android:textSize="24sp"
+        android:textColor="?colorOnBackground"
+        android:fontFamily="@font/koho"
         android:text="@string/title_dialog" />
 
     <androidx.recyclerview.widget.RecyclerView
