--- a/app/src/main/res/layout/fragment_detail_keuangan_kiri.xml
+++ b/app/src/main/res/layout/fragment_detail_keuangan_kiri.xml
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:text="Detail Keuangan"
+            android:text="Detail Keuangan Kerjasama"
             android:textColor="@android:color/black"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -48,7 +48,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-
             android:layout_marginTop="4dp"
             android:text="Universitas Sebelas Maret"
             android:textColor="@android:color/holo_blue_dark"
