--- a/app/src/main/res/layout/fragment_detail_perusahaan_kiri.xml
+++ b/app/src/main/res/layout/fragment_detail_perusahaan_kiri.xml
@@ -22,9 +22,9 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="273dp"
+        android:layout_width="422dp"
+        android:layout_height="668dp"
+        android:layout_marginBottom="100dp"
         android:background="@drawable/border_background"
         android:orientation="vertical"
         android:padding="16dp"
@@ -32,13 +32,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/image_view"
-        app:layout_constraintVertical_bias="0.66">
+        app:layout_constraintTop_toBottomOf="@+id/image_view"
+        app:layout_constraintVertical_bias="0.076">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Detail Perusahaan"
+            android:layout_marginLeft="10dp"
+            android:text="Detail Perusahaan Terlibat"
             android:textColor="@android:color/black"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -46,34 +47,23 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="4dp"
             android:text="Universitas Sebelas Maret"
             android:textColor="@android:color/holo_blue_dark"
             android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed magna non est dignissim vulputate vel ac sem. Sed egestas non lorem commodo sodales. Ut sagittis mi sit amet odio aliquam fermentum sit amet id nibh. Mauris eu fermentum libero, sed elementum sem. Maecenas venenatis augue in est vulputate, dapibus porttitor nibh ullamcorper."
-            android:textColor="@android:color/black"
-            android:textSize="14sp" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:background="@android:color/transparent" />
-
-        </RelativeLayout>
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_perusahaan_kiri"
+            android:layout_width="378dp"
+            android:layout_height="386dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintBottom_toBottomOf="@+id/view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.515"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintVertical_bias="0.0" />
 
     </LinearLayout>
 
