--- a/app/src/main/res/layout/fragment_detail_rinci.xml
+++ b/app/src/main/res/layout/fragment_detail_rinci.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@drawable/backgroundall"
-    tools:context=".ui.grafik.DetailKeuanganKanan">
+    tools:context=".ui.grafik.DetailRinciFragment">
 
     <ImageView
         android:id="@+id/image_view"
@@ -13,7 +13,7 @@
         android:layout_height="250dp"
         android:layout_marginBottom="481dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/financial"
+        android:src="@drawable/gedunguns"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -22,9 +22,9 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="273dp"
+        android:layout_width="410dp"
+        android:layout_height="666dp"
+        android:layout_marginBottom="100dp"
         android:background="@drawable/border_background"
         android:orientation="vertical"
         android:padding="16dp"
@@ -32,32 +32,37 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/image_view"
-        app:layout_constraintVertical_bias="0.66">
+        app:layout_constraintTop_toBottomOf="@+id/image_view"
+        app:layout_constraintVertical_bias="0.076">
 
         <TextView
+            android:id="@+id/tv_item_company"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Detail Keuangan"
+            android:layout_marginLeft="10dp"
+            android:text="Company"
             android:textColor="@android:color/black"
             android:textSize="24sp"
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/tv_item_year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="Universitas Sebelas Maret"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="7dp"
+            android:text="Year"
             android:textColor="@android:color/holo_blue_dark"
-            android:textSize="16sp" />
+            android:textSize="17sp" />
 
         <TextView
+            android:id="@+id/tv_item_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed magna non est dignissim vulputate vel ac sem. Sed egestas non lorem commodo sodales. Ut sagittis mi sit amet odio aliquam fermentum sit amet id nibh. Mauris eu fermentum libero, sed elementum sem. Maecenas venenatis augue in est vulputate, dapibus porttitor nibh ullamcorper."
-            android:textColor="@android:color/black"
-            android:textSize="14sp" />
+            android:justificationMode="inter_word"
+            android:padding="10dp"
+            android:textSize="16sp"
+            android:text="description" />
 
     </LinearLayout>
 
