--- a/app/src/main/res/layout/item_row_perusahaan.xml
+++ b/app/src/main/res/layout/item_row_perusahaan.xml
@@ -10,11 +10,12 @@
     android:layout_marginTop="4dp"
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="4dp"
-    card_view:cardCornerRadius="4dp">
+    card_view:cardCornerRadius="4dp"
+    card_view:cardBackgroundColor="@color/honey">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="104dp"
+        android:layout_height="wrap_content"
         android:padding="8dp">
 
         <TextView
@@ -39,12 +40,14 @@
             tools:text="@string/money" />
 
         <TextView
-            android:id="@+id/tv_item_money"
-            android:layout_width="276dp"
+            android:id="@+id/tv_item_description"
+            android:layout_width="match_parent"
             android:layout_height="24dp"
             android:layout_marginTop="8dp"
             android:text="@string/cate"
-            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_company"
-            tools:layout_editor_absoluteX="-1dp" />
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintHorizontal_bias="0.0"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_company" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
