--- a/app/src/main/res/layout/item_row_perusahaan_kiri.xml
+++ b/app/src/main/res/layout/item_row_perusahaan_kiri.xml
@@ -19,7 +19,7 @@
         android:padding="8dp">
 
         <TextView
-            android:id="@+id/tv_item_year"
+            android:id="@+id/tv_item_yearperukiri"
             android:layout_width="276dp"
             android:layout_height="24dp"
             android:textSize="16sp"
@@ -29,32 +29,25 @@
             tools:text="@string/year" />
 
         <TextView
-            android:id="@+id/tv_item_money"
+            android:id="@+id/tv_item_company"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:ellipsize="end"
             android:maxLines="5"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_year"
+            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_yearperukiri"
+            tools:layout_editor_absoluteX="8dp"
             tools:text="@string/money" />
 
         <TextView
-            android:id="@+id/tv_item_cate"
-            android:layout_width="64dp"
+            android:id="@+id/tv_item_money"
+            android:layout_width="276dp"
             android:layout_height="24dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginTop="8dp"
             android:text="@string/cate"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:background="@drawable/border_category"
-            card_view:layout_constraintBottom_toTopOf="@+id/tv_item_money"
             card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="1.0"
-            card_view:layout_constraintStart_toEndOf="@+id/tv_item_year"
-            card_view:layout_constraintTop_toTopOf="parent"
-            card_view:layout_constraintVertical_bias="0.0" />
+            card_view:layout_constraintHorizontal_bias="0.0"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_company" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
