Styling side dan bot nav donee

--- a/app/src/main/res/layout/fragment_grafik_kiri.xml
+++ b/app/src/main/res/layout/fragment_grafik_kiri.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:fontFamily="@font/andada"
+            android:fontFamily="@font/koho"
             android:text="@string/title_grafikkiri"
             android:textColor="@color/black"
             android:textSize="29sp"
